--- a/etc/config/wordpress.ini
+++ b/etc/config/wordpress.ini
@@ -4,3 +4,14 @@ upload_max_filesize = 10240M
 max_input_vars = 5000
 post_max_size = 10240M
 max_execution_time = 300
+
+; Sendmail
+sendmail_path = "/usr/local/bin/mhsendmail sendmail --smtp-addr=mailserver:1025 dev@mailhog.local"
+
+;PHPStorm
+[xdebug]
+xdebug.remote_enable=1
+xdebug.idekey=PHPSTORM
+xdebug.profiler_enable=0
+xdebug.max_nesting_level=700
+xdebug.remote_host=192.168.1.36
