--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-
 # Begin gitignore
 
-### DB ###
-server
+### DB files ###
+etc/data
+
+### SSL files ###
+etc/ssl
 
 ### Intellij+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
