--- a/.env-example
+++ b/.env-example
@@ -7,6 +7,7 @@ NETWORK_NAME=${APP_NAME}
 PORT_NGINX=80
 PORT_NGINX_SSL=443
 PORT_PHP=9001
+PORT_NODEJS=3000
 PORT_MYSQL=3306
 PORT_PHP_MYADMIN=8080
 PORT_MAILHOG_SERVER=1025
