--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,25 @@
 # Begin gitignore
 
-### DB && Portainer data ###
+## Env vars ##
+.env
+
+### DB ###
 etc/data
 
 ### SSL files ###
-etc/certs/live/localhost/**.pem
+etc/certs/live/**/**.pem
 
-## Env vars ##
-.env
+### WordPress General ###
+app/wp-admin
+app/wp-includes
+app/**.php
+app/**.txt
+app/**.html
+app/**.htaccess
+
+### WordPress Content ###
+app/wp-content/plugins
+app/wp-content/themes/twenty**
 
 ### Linux ###
 *~
