--- a/etc/config/nginx.conf
+++ b/etc/config/nginx.conf
@@ -65,7 +65,7 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
 
-        fastcgi_pass appserver:9000;
+        fastcgi_pass phpserver:9000;
         fastcgi_buffer_size 64k;
         fastcgi_buffers 32 32k;
         fastcgi_read_timeout 1200s;
@@ -126,7 +126,7 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
 
-        fastcgi_pass appserver:9000;
+        fastcgi_pass phpserver:9000;
         fastcgi_buffer_size 64k;
         fastcgi_buffers 32 32k;
         fastcgi_read_timeout 1200s;
