--- a/.env-example
+++ b/.env-example
@@ -1,26 +1,22 @@
 #!/usr/bin/env bash
 
 # Generic
-APP_NAME=docker-wp
-NETWORK_NAME=${APP_NAME}
+APP_NAME="docker-wp"
 # PORTS
-PORT_NGINX=80
-PORT_NGINX_SSL=443
+PORT_NGINX=8080
+PORT_NGINX_SSL=8081
 PORT_PHP=9001
-PORT_NODEJS=3000
-PORT_MYSQL=3306
-PORT_PHP_MYADMIN=8080
-PORT_MAILHOG_SERVER=1025
-PORT_MAILHOG_UI=8025
-PORT_PORTAINER=8000
+PORT_DB=3306
+PORT_DB_ADMIN=8082
+PORT_MAIL_SERVER=1025
+PORT_MAIL_UI=8025
 # DB Credentials
-MYSQL_ROOT_USER=root
-MYSQL_ROOT_PASSWORD=superSecretPwd
-MYSQL_DATABASE=dockerWP
-MYSQL_USER=devUser
-MYSQL_PASSWORD=superSecret
-# WordPress
-WORDPRESS_DB_USER=${MYSQL_ROOT_USER}
-WORDPRESS_DB_PASSWORD=${MYSQL_ROOT_PASSWORD}
-WORDPRESS_DB_NAME=${MYSQL_DATABASE}
-WORDPRESS_TABLE_PREFIX=dwp_
+DB_HOST="dbserver"
+DB_ROOT_USER="root"
+DB_ROOT_PASSWORD="superSecretPwd"
+DB_NAME="dockerWP"
+DB_USER="devUser"
+DB_PASSWORD="superSecret"
+DB_TABLE_PREFIX="dwp_"
+# Repository Key
+REPOSITORY_TOKEN_PLUGINS="you-github-or-bitbucket-api-access-token"
