--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     nginxserver:
         build:
             context: .
-            dockerfile: etc/docker/nginx.dockerfile
+            dockerfile: .config/docker/nginx.dockerfile
         container_name: ${APP_NAME}-nginx
         restart: unless-stopped
         tty: true
@@ -14,9 +14,9 @@ services:
         depends_on:
             - phpserver
         volumes:
-            - ./app:/var/www/html
-            - ./etc/certs:/etc/letsencrypt
-            - ./etc/config/nginx.conf:/etc/nginx/conf.d/default.conf
+            - .:/var/www/html
+            - ./.config/certs:/etc/letsencrypt
+            - ./.config/etc/nginx.conf:/etc/nginx/conf.d/default.conf
         links:
             - phpserver
             - dbserver
@@ -30,7 +30,7 @@ services:
         restart: always
         tty: true
         volumes:
-            - ./etc/data/db_data:/var/lib/mysql
+            - ./.config/data/db_data:/var/lib/mysql
         environment:
             MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
             MYSQL_DATABASE: ${DB_NAME}
@@ -44,12 +44,13 @@ services:
     phpserver:
         build:
             context: .
-            dockerfile: etc/docker/php.dockerfile
+            dockerfile: .config/docker/php.dockerfile
         container_name: ${APP_NAME}-php
+        command: php-fpm
         restart: unless-stopped
         volumes:
-            - ./etc/config/wordpress.ini:/usr/local/etc/php/conf.d/wordpress.ini
-            - ./app:/var/www/html
+            - ./.config/etc/wordpress.ini:/usr/local/etc/php/conf.d/wordpress.ini
+            - .:/var/www/html
         environment:
             WORDPRESS_DB_HOST: ${DB_HOST}
             MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
